绝知此事要躬行

--- a/记录格式.md
+++ b/记录格式.md
@@ -1,11 +1,13 @@
-* ## 记录内容
+* # 记录内容
 
-  * 时间
-  * 错误信息或错误现象描述
-  * 解决该错误的方法
-  * 引起该错误的源码
-  * 该错误反映自己什么问题没有掌握好（或理解有误）
-  * 错误类型
+  * 时间（时间）
+  * 想要的结果或者是期望值。（期望）
+  * 错误信息或错误现象描述。（错误）
+  * 引起该错误的源码（源码）
+  * 解决该错误的方法（解决）
+  * 改正后的源码（改正）
+  * 该错误反映自己什么问题没有掌握好（或理解有误）（反思）
+  * 错误类型（类型）
 
 * # 统计更新
 
