--- a/常见错误.md
+++ b/常见错误.md
@@ -1,28 +1,45 @@
-* # 错误数量记录
+### 5.3.1常见错误
 
-  1. ### 打字错误
+#### 1. 语法错误(syntactic error)
 
-     * #
+* 拼错单词了，少了分号了，少了结构了等等
+* 报错挺抽象的，报哪行出错并不一定还是这行出错了。。
 
-  2. ### 整数除法与浮点数除法
+#### 2. 逻辑错误(logical errors)
 
-  3. ### 类型混淆错用
+* 常见错误类型
+  * 错误的条件表达式
+    * 导致if，while出错
+  * 计数器错误的初始值
+    * 导致while多执行，少执行。
+  * 意外
+    * 遇到意外的数据，非法的数据等等
 
-  4. ### 变量数值超出范围
+# 错误数量记录
 
-  5. ### 未初始化或未清零
+1. ### 打字错误
 
-  6. ### 数组下标越界
+   * #
 
-     * #
+2. ### 整数除法与浮点数除法
 
-  7. ### 变量的意义不一致(你想要的值实际上并不是你想要的值)
+3. ### 类型混淆错用
 
-     * ####
+4. ### 变量数值超出范围
 
-  8. ### 运算符优先级搞错
+5. ### 未初始化或未清零
 
-     * #
+6. ### 数组下标越界
+
+   * #
+
+7. ### 变量的意义不一致(你想要的值实际上并不是你想要的值),所以出错了要验证预期
+
+   * ####
+
+8. ### 运算符优先级搞错
+
+   * #
 
 ### 		
 
